--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
       <div id="scoreboard" class="section">
         <ol>
-          <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
+          <li class="tries">
+            <img src="images/liveHeart.png" height="35px" width="30px">
+          </li>
           <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
           <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
           <li class="tries"><img src="images/liveHeart.png" height="35px" width="30px"></li>
