adding final transitions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h2 class="header">Wheel of Success</h2>
       </div>
 
+      <div id="instructions" class="section">
+        <p>Guess the phrase below!</p>
+      </div>
+
       <div id="phrase" class="section">
         <ul></ul>
       </div>
