added keyboard functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       </div>
 
       <div id="instructions" class="section">
-        <p>Guess the phrase below!</p>
+        <p>Guess the phrase below!<br>
+        <em>Click or type</em></p>
       </div>
 
       <div id="phrase" class="section">
